Harden v1.21.0 RC against ChatGPT Pro second review (CQ-01–CQ-40).
Diagnose GitHub Actions on ed0c7f9 (doc snippet syntax, generator
__init__ export wipe, Rust unwrap_used), fix all 40 code-scanning
alerts, make the recipe gate fail-closed and report-safe, pass the
literal ResolvedValidationBundle into concept coverage, and complete
cross-language graph mutation/policy parity. Evidence under
artifacts/ci/. Do not tag the release.

Co-authored-by: Cursor <cursoragent@cursor.com>